--- a/Index.html
+++ b/Index.html
@@ -4,9 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>PrimeCineplex</title>
 </head>
 <body>
-    
+    <header>
+       <nav>
+            <a href=""><img src="logo.jpg" style="height: 100px; width: 100px;"></a>
+            <a href="movie.html">kino</a>
+            <a href="">zuvhun manaid</a>
+            <a href="">uilchilgee</a>
+            <a href="">bidnii tuhai</a>
+            <a href="">nevtreh</a>
+       </nav>
+    </header>
 </body>
 </html>
