tsenguun login push hiisen

--- a/login.html
+++ b/login.html
@@ -1,6 +1,20 @@
 <!DOCTYPE html>
-<main>
-    <p>
-        shadfaisv
-    </p>
-</main>
+    <html>
+        <head>
+        <title>Нэвтрэх</title>
+        </head>
+        <body>
+            <div>
+                <p>Member буюу гишүүн болж байгаа гэхээр үнэхээр гоё байгаа биз. 5 кино үзээд 1 энгийн, 10 кино үзээд 1 4DX эсвэл Dolby #Atmos танхимд (хосоороо) үнэгүй кино үзнэ шүү дээ. Мөн өөрийн мэдрэмжийг бусадтай хуваалцах, үнэлгээг өгөх боломжтой.</p>
+            </div>
+            <div>
+                <p>Log in here</p>
+                <ul>
+                    <li><input type="email"></li>
+                    <li><input type="text"></li>
+                    <li><input type="submit"></li>
+                </ul>
+                <p>Having problems? Reset details</p>
+            </div>
+        </body>
+    </html>
