home page added

--- a/index.html
+++ b/index.html
@@ -4,18 +4,94 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>PrimeCineplex</title>
+    <title>PrimeCineplexMongolia</title>
 </head>
 <body>
     <header>
-       <nav>
-            <a href=""><img src="logo.jpg" style="height: 100px; width: 100px;"></a>
-            <a href="movie.html">kino</a>
-            <a href="">zuvhun manaid</a>
-            <a href="">uilchilgee</a>
-            <a href="">bidnii tuhai</a>
-            <a href="">nevtreh</a>
-       </nav>
+        <nav>
+            <ul>
+                <address>
+                <li><a href="https://www.facebook.com/PrimeCineplexMongolia">fb</a></li>
+                <li><a href="https://www.instagram.com/primecineplex_mongolia/">ig</a></li>
+                <li><a href="https://www.youtube.com/@primecineplexmongolia3406">yt</a></li>
+                <li><a href="mailto:info@primecineplex.mn">mail</a></li>
+                </address>
+            </ul>
+        </nav>
+        <nav>
+            <ul>
+                <li><a href="index.html"><img src="Images/logo.jpg" style="height: 50px;" alt="primeLogo"></a></li>
+                <li><a href="nowplaying.html">КИНО</a></li>
+                <li><a href="">ЗӨВХӨН МАНАЙД</a></li>
+                <li><a href="">ҮЙЛЧИЛГЭЭ</a></li>
+                <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
+                <li><a href="login.html">НЭВТРЭХ</a></li>
+            </ul>
+        </nav>
     </header>
+    <main>
+        <div>
+            <nav>
+                <ul>
+                    <li><img src="Images/bigposter1.png" style="height: 50px" alt="Elemental poster"><button>Трэйлэр</button><button>Захиалах</button></li>
+                    <li><img src="Images/bigposter2.png" style="height: 50px;" alt="Suzumu poster"><button>Трэйлэр</button><button>Захиалах</button></li>
+                    <li><img src="Images/bigposter3.png" style="height: 50px;" alt="The NUN poster"><button>Трэйлэр</button><button>Захиалах</button></li>
+                </ul>
+            </nav>
+            <nav>
+                <h3>МАНАЙ ДЭЛГЭЦНЭЭ</h3>
+                <ul>
+                    <li><a href=""><img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzumi poster">Suzume no Tojimari</a></li>
+                    <li><a href=""><img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental</a></li>
+                    <li><a href=""><img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The Nun poster">The NUN</a></li>
+                    <li><a href=""><img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Budilaan poster">Будилаан</a></li>
+                    <li><a href=""><img src="Images/nowplaying_poster5.png" style="height: 100px;" alt="A Haunting in Venice poster">A Haunting in Venice</a></li>
+                </ul>
+            </nav>
+            <nav>
+                <h3>ТУН УДАХГҮЙ</h3>
+                <ul>
+                    <li><a href=""><img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator</a></li>
+                    <li><a href=""><img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol</a></li>
+                    <li><a href=""><img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb</a></li>
+                    <li><a href=""><img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw poster">Saw X</a></li>
+                    <li><a href=""><img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The e=Exorcist poster">The Exorcist</a></li>
+                </ul>
+            </nav>
+        </div>
+    </main>
+    <footer>
+       <div>
+            <address>
+                <ul>
+                    <li>
+                        <img src="Images/footer_location-icon.png" style="height: 30px;">
+                        <p>Монгол улс, Улаанбаатар хот, <br>
+                            Хан-Уул дүүрэг 11-р хороо, <br>
+                            Дүнжингаравын гудамж, <br>
+                            Зайсан Хилл Цогцолбор, 1-р давхар</p>
+                    </li>
+                    <li>
+                        <img src="Images/footer_mail-icon.png" style="height: 30px;">
+                        <a href="mailto:info@primecineplex.mn">info@primecineplex.mn</a>
+                    </li>
+                    <li>
+                        <img src="Images/footer_phone-icon.png" style="height: 30px;">
+                        <p>+976-7510-0000</p>
+                    </li>
+                </ul>
+            </address>
+       </div>
+       <div>
+            <label for="location">Салбараа сонгоно уу.</label>
+            <select name="" id="">
+                <option value="">Зайсан Хилл Комплекс</option>
+                <option value="">Энканто товер</option>
+                <option value="">Ботаник центер</option>
+            </select>
+            <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a></p>
+       </div> 
+    </footer>
 </body>
 </html>
+
