--- a/create.html
+++ b/create.html
@@ -35,7 +35,7 @@
         <div>
             <input type="checkbox">
             <p>I agree to receive marketing emails from Prime Cineplex.</p>
-            <input type="submit" value="Create account">
+            <button type="button">Create account</button>
         </div>
     </body>
 </html>
