--- a/login.html
+++ b/login.html
@@ -8,13 +8,13 @@
                 <p>Member буюу гишүүн болж байгаа гэхээр үнэхээр гоё байгаа биз. 5 кино үзээд 1 энгийн, 10 кино үзээд 1 4DX эсвэл Dolby #Atmos танхимд (хосоороо) үнэгүй кино үзнэ шүү дээ. Мөн өөрийн мэдрэмжийг бусадтай хуваалцах, үнэлгээг өгөх боломжтой.</p>
             </div>
             <div>
-                <p>Log in here</p>
+                <p>Нэвтрэх</p>
                 <ul>
-                    <li><input type="email"></li>
-                    <li><input type="text"></li>
-                    <li><input type="submit"></li>
+                    <li><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
+                    <li><input type="text" placeholder="Нууц үг"></li>
+                    <li><button type="button">Нэвтрэх</button></li>
                 </ul>
-                <p>Having problems? Reset details</p>
+                <p>Нууц үгээ мартсан уу?</p>
             </div>
         </body>
     </html>
