--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
         <nav>
             <ul>
                 <address>
-                <li><a href="https://www.facebook.com/PrimeCineplexMongolia">fb</a></li>
-                <li><a href="https://www.instagram.com/primecineplex_mongolia/">ig</a></li>
-                <li><a href="https://www.youtube.com/@primecineplexmongolia3406">yt</a></li>
-                <li><a href="mailto:info@primecineplex.mn">mail</a></li>
-                </address>
+                    <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
+                    <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
+                    <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
+                    <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                    </address>
             </ul>
         </nav>
         <nav>
