--- a/login.html
+++ b/login.html
@@ -4,17 +4,74 @@
         <title>Нэвтрэх</title>
         </head>
         <body>
-            <div>
-                <p>Member буюу гишүүн болж байгаа гэхээр үнэхээр гоё байгаа биз. 5 кино үзээд 1 энгийн, 10 кино үзээд 1 4DX эсвэл Dolby #Atmos танхимд (хосоороо) үнэгүй кино үзнэ шүү дээ. Мөн өөрийн мэдрэмжийг бусадтай хуваалцах, үнэлгээг өгөх боломжтой.</p>
-            </div>
-            <div>
-                <p>Нэвтрэх</p>
-                <ul>
-                    <li><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
-                    <li><input type="text" placeholder="Нууц үг"></li>
-                    <li><button type="button">Нэвтрэх</button></li>
-                </ul>
-                <p>Нууц үгээ мартсан уу?</p>
-            </div>
+            <header>
+                <nav>
+                    <ul>
+                        <address>
+                            <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
+                            <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
+                            <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
+                            <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                            </address>
+                    </ul>
+                </nav>
+                <nav>
+                    <ul>
+                        <li><a href="index.html"><img src="Images/logo.jpg" style="height: 50px;" alt="primeLogo"></a></li>
+                        <li><a href="nowplaying.html">КИНО</a></li>
+                        <li><a href="">ЗӨВХӨН МАНАЙД</a></li>
+                        <li><a href="">ҮЙЛЧИЛГЭЭ</a></li>
+                        <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
+                        <li><a href="login.html">НЭВТРЭХ</a></li>
+                    </ul>
+                </nav>
+            </header>
+            <main>
+                <div>
+                    <p>Member буюу гишүүн болж байгаа гэхээр үнэхээр гоё байгаа биз. 5 кино үзээд 1 энгийн, 10 кино үзээд 1 4DX эсвэл Dolby #Atmos танхимд (хосоороо) үнэгүй кино үзнэ шүү дээ. Мөн өөрийн мэдрэмжийг бусадтай хуваалцах, үнэлгээг өгөх боломжтой.</p>
+                </div>
+                <div>
+                    <p>Нэвтрэх</p>
+                    <ul>
+                        <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="email" placeholder="Нэвтрэх нэр(имэйл хаяг)"></li>
+                        <li><input type="text" placeholder="Нууц үг"></li>
+                        <li><button type="button">Нэвтрэх</button></li>
+                        <li><a href="create.html">Бүртгүүлэх</a></li>
+                    </ul>
+                    <p>Нууц үгээ мартсан уу?</p>
+                </div>
+            </main>
+            <footer>
+                <div>
+                     <address>
+                         <ul>
+                             <li>
+                                 <img src="Images/footer_location-icon.png" style="height: 30px;">
+                                 <p>Монгол улс, Улаанбаатар хот, <br>
+                                     Хан-Уул дүүрэг 11-р хороо, <br>
+                                     Дүнжингаравын гудамж, <br>
+                                     Зайсан Хилл Цогцолбор, 1-р давхар</p>
+                             </li>
+                             <li>
+                                 <img src="Images/footer_mail-icon.png" style="height: 30px;">
+                                 <a href="mailto:info@primecineplex.mn">info@primecineplex.mn</a>
+                             </li>
+                             <li>
+                                 <img src="Images/footer_phone-icon.png" style="height: 30px;">
+                                 <p>+976-7510-0000</p>
+                             </li>
+                         </ul>
+                     </address>
+                </div>
+                <div>
+                     <label for="location">Салбараа сонгоно уу.</label>
+                     <select name="" id="">
+                         <option value="">Зайсан Хилл Комплекс</option>
+                         <option value="">Энканто товер</option>
+                         <option value="">Ботаник центер</option>
+                     </select>
+                     <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a></p>
+                </div> 
+             </footer>
         </body>
     </html>
