ts english -> mongol

--- a/create.html
+++ b/create.html
@@ -28,37 +28,37 @@
         </header>
         <main>
             <div>
-                <h1>USERNAME</h1>
-                <p>Complete all fields, unless otherwise stated.</p>
+                <h1>Нэвтрэх нэр</h1>
+                <p>Бүх талбарыг бөглөнө үү!</p>
                 <ul>
-                    <li><input type="email" placeholder="Email address (this will be your username)*" required /></li>
-                    <li><input type="email" placeholder="Confirm email*" required/></li>
+                    <li><input type="email" placeholder="Имэйл хаяг (энэ нь таны хэрэглэгчийн нэр байх болно)*" required /></li>
+                    <li><input type="email" placeholder="Имэйлээ баталгаажуулах*" required/></li>
                 </ul>
             </div>
             
             <div">
-                <h1>PERSONAL INFO</h1>
-                <p>Complete all fields, unless otherwise stated.</p>
+                <h1>Хувийн мэдээлэл</h1>
+                <p>Бүх талбарыг бөглөнө үү!</p>
                 <ul>
-                    <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="text" placeholder="First name*" required /></li>
-                    <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="text" placeholder="Last name*" required/></li>
+                    <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="text" placeholder="Овог*" required /></li>
+                    <li><img width="25px" height="25px" src="img_ts/icon_pro.png"><input type="text" placeholder="Нэр*" required/></li>
                     <li><input type="date" placeholder="mm/dd/yyyy" required/><img width="25px" height="25px" src="img_ts/Icon_cal.png"></li>
                     <li><input type="text" placeholder="Zip Code*" required/></li>
-                    <li><input type="text" placeholder="Phone no.*" required/></li>
+                    <li><input type="text" placeholder="Утасны дугаар*" required/></li>
                 </ul>
             </div>
             <div>
-                <h1>PASSWORD</h1>
-                <p>Last thing to create your account. Min 8 characters. Must contain at least : 1 uppercase, 1 number.</p>
+                <h1>Нууц үг</h1>
+                <p>Бүртгэлээ үүсгэх сүүлийн алхам. Хамгийн багадаа 8 тэмдэгт. Хамгийн багадаа: 1 том үсэг, 1 тоо агуулсан байх ёстой.</p>
                 <ul>
-                    <li><input type="email" placeholder="Email address (this will be your username)*" required /></li>
-                    <li><input type="email" placeholder="Confirm email*" required/></li>
+                    <li><input type="password" placeholder="Нууц үг үүсгэх" required /></li>
+                    <li><input type="password" placeholder="Нууц үгээ баталгаажуулна уу*" required/></li>
                 </ul>
             </div>
             <div>
                 <input type="checkbox">
-                <p>I agree to receive marketing emails from Prime Cineplex.</p>
-                <button type="button">Create account</button>
+                <p>Би Prime Cineplex-ээс имэйл хүлээн авахыг зөвшөөрч байна.</p>
+                <button type="button">Бүртгэл үүсгэх</button>
             </div>
         </main>
         <footer>
