--- a/movie.html
+++ b/movie.html
@@ -144,6 +144,7 @@
          &#9734; &#9734; &#9734; &#9734; &#9734;
          <p>Одон дээр даран үнэлгээ өгнө үү</p>
          <p>Энд сэтгэгдлээ бичнэ үү</p>
+         <textarea name="" id="" cols="30" rows="10"></textarea>
          <button>Илгээх</button>
     </div>
     <footer>
