--- a/index.html
+++ b/index.html
@@ -41,21 +41,21 @@
             <nav>
                 <h3>МАНАЙ ДЭЛГЭЦНЭЭ</h3>
                 <ul>
-                    <li><a href=""><img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzumi poster">Suzume no Tojimari</a></li>
-                    <li><a href=""><img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental</a></li>
-                    <li><a href=""><img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The Nun poster">The NUN</a></li>
-                    <li><a href=""><img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Budilaan poster">Будилаан</a></li>
-                    <li><a href=""><img src="Images/nowplaying_poster5.png" style="height: 100px;" alt="A Haunting in Venice poster">A Haunting in Venice</a></li>
+                    <li><a href="movie.html"><img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzumi poster">Suzume no Tojimari</a></li>
+                    <li><a href="movie.html"><img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental</a></li>
+                    <li><a href="movie.html"><img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The Nun poster">The NUN</a></li>
+                    <li><a href="movie.html"><img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Budilaan poster">Будилаан</a></li>
+                    <li><a href="movie.html"><img src="Images/nowplaying_poster5.png" style="height: 100px;" alt="A Haunting in Venice poster">A Haunting in Venice</a></li>
                 </ul>
             </nav>
             <nav>
                 <h3>ТУН УДАХГҮЙ</h3>
                 <ul>
-                    <li><a href=""><img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator</a></li>
-                    <li><a href=""><img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol</a></li>
-                    <li><a href=""><img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb</a></li>
-                    <li><a href=""><img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw poster">Saw X</a></li>
-                    <li><a href=""><img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The e=Exorcist poster">The Exorcist</a></li>
+                    <li><a href="movie.html"><img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator</a></li>
+                    <li><a href="movie.html"><img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol</a></li>
+                    <li><a href="movie.html"><img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb</a></li>
+                    <li><a href="movie.html"><img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw poster">Saw X</a></li>
+                    <li><a href="movie.html"><img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The e=Exorcist poster">The Exorcist</a></li>
                 </ul>
             </nav>
         </div>
