link nemj holbov

--- a/nowplaying.html
+++ b/nowplaying.html
@@ -34,7 +34,7 @@
     <main>
         <section>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzume poster">Suzume
                 </a>
                 <a href="https://www.imdb.com/title/tt16428256/?ref_=nv_sr_srsg_3_tt_4_nm_4_q_Suzu">
@@ -45,7 +45,7 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental
                 </a>
                 <a href="https://www.imdb.com/title/tt15789038/?ref_=nv_sr_srsg_0_tt_2_nm_6_q_ele">
@@ -56,7 +56,7 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The NUN poster">The NUN
                 </a>
                 <a href="https://www.imdb.com/title/tt10160976/?ref_=nv_sr_srsg_2_tt_6_nm_0_q_the%2520nun">
@@ -67,12 +67,12 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Будилаан poster">Будилаан
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator
                 </a>
                 <a href="https://www.imdb.com/title/tt11858890/?ref_=nv_sr_srsg_0_tt_7_nm_1_q_the%2520crea">
@@ -83,7 +83,7 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol
                 </a>
                 <a href="https://www.imdb.com/title/tt15837338/?ref_=nv_sr_srsg_0_tt_8_nm_0_q_paw%2520patrol">
@@ -94,7 +94,7 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb
                 </a>
                 <a href="https://www.imdb.com/title/tt9100018/?ref_=nv_sr_srsg_1_tt_6_nm_1_q_cobwe">
@@ -105,7 +105,7 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw X poster">Saw X
                 </a>
                 <a href="https://www.imdb.com/title/tt21807222/?ref_=nv_sr_srsg_1_tt_7_nm_0_q_saw">
@@ -116,7 +116,7 @@
                 </a>
             </article>
             <article>
-                <a href="">
+                <a href="movie.html">
                     <img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The Exorcist poster">The Exorcist
                 </a>
                 <a href="https://www.imdb.com/title/tt12921446/?ref_=nv_sr_srsg_4_tt_7_nm_0_q_the%2520exorcist">
