--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Манай дэлгэцнээ гарч буй кинонууд, Тун удахгүй гарах кино, кино үзэх ">
     <title>PrimeCineplexMongolia</title>
 </head>
 <body>
@@ -65,26 +66,25 @@
             <address>
                 <ul>
                     <li>
-                        <img src="Images/footer_location-icon.png" style="height: 30px;">
+                        <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
                         <p>Монгол улс, Улаанбаатар хот, <br>
                             Хан-Уул дүүрэг 11-р хороо, <br>
                             Дүнжингаравын гудамж, <br>
                             Зайсан Хилл Цогцолбор, 1-р давхар</p>
                     </li>
                     <li>
-                        <img src="Images/footer_mail-icon.png" style="height: 30px;">
+                        <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
                         <a href="mailto:info@primecineplex.mn">info@primecineplex.mn</a>
                     </li>
                     <li>
-                        <img src="Images/footer_phone-icon.png" style="height: 30px;">
+                        <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
                         <p>+976-7510-0000</p>
                     </li>
                 </ul>
             </address>
        </div>
        <div>
-            <label for="location">Салбараа сонгоно уу.</label>
-            <select name="" id="">
+            <select name="" id="" >
                 <option value="">Зайсан Хилл Комплекс</option>
                 <option value="">Энканто товер</option>
                 <option value="">Ботаник центер</option>
