--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <header>
         <nav>
             <ul>
-                <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
-                <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
+                <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><address><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></address></a></li>
+                <li><a href="https://www.instagram.com/primecineplex_mongolia/"><address><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></address></a></li>
+                <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><address><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></address></a></li>
                 <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
             </ul>
         </nav>
@@ -64,18 +64,18 @@
             <ul>
                 <li>
                     <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
-                    <p>Монгол улс, Улаанбаатар хот, <br>
+                    <p><address>Монгол улс, Улаанбаатар хот, <br>
                         Хан-Уул дүүрэг 11-р хороо, <br>
                         Дүнжингаравын гудамж, <br>
-                        Зайсан Хилл Цогцолбор, 1-р давхар</p>
+                        Зайсан Хилл Цогцолбор, 1-р давхар</address></p>
                 </li>
                 <li>
                     <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
-                    <a href="mailto:info@primecineplex.mn">info@primecineplex.mn</a>
+                    <a href="mailto:info@primecineplex.mn"><address>@primecineplex.mn</address></a>
                 </li>
                 <li>
                     <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
-                    <p>+976-7510-0000</p>
+                    <p><address>+976-7510-0000</address></p>
                 </li>
             </ul>
        </div>
