ymr c aldagu bolgov

--- a/nowplaying.html
+++ b/nowplaying.html
@@ -1,10 +1,11 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>Одоо гарч буй кино</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <meta name="description" content="Одоо гарч буй кинонууд, дэлгэцнээ гарч буй кино, кино үзэх">
     <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <script src='main.js'></script>
 </head>
@@ -12,20 +13,18 @@
     <header>
         <nav>
             <ul>
-                <address>
                 <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
                 <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
                 <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
                 <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
-                </address>
             </ul>
         </nav>
         <nav>
             <ul>
                 <li><a href="index.html"><img src="Images/logo.jpg" style="height: 50px;" alt="primeLogo"></a></li>
                 <li><a href="nowplaying.html">КИНО</a></li>
-                <li><a href="">ЗӨВХӨН МАНАЙД</a></li>
-                <li><a href="">ҮЙЛЧИЛГЭЭ</a></li>
+                <li><a href="aboutus.html">ЗӨВХӨН МАНАЙД</a></li>
+                <li><a href="aboutus.html">ҮЙЛЧИЛГЭЭ</a></li>
                 <li><a href="aboutus.html">БИДНИЙ ТУХАЙ</a></li>
                 <li><a href="login.html">НЭВТРЭХ</a></li>
             </ul>
@@ -130,29 +129,26 @@
     </main>
     <footer>
         <div>
-             <address>
-                 <ul>
-                     <li>
-                         <img src="Images/footer_location-icon.png" style="height: 30px;">
-                         <p>Монгол улс, Улаанбаатар хот, <br>
-                             Хан-Уул дүүрэг 11-р хороо, <br>
-                             Дүнжингаравын гудамж, <br>
-                             Зайсан Хилл Цогцолбор, 1-р давхар</p>
-                     </li>
-                     <li>
-                         <img src="Images/footer_mail-icon.png" style="height: 30px;">
-                         <a href="mailto:info@primecineplex.mn">info@primecineplex.mn</a>
-                     </li>
-                     <li>
-                         <img src="Images/footer_phone-icon.png" style="height: 30px;">
-                         <p>+976-7510-0000</p>
-                     </li>
-                 </ul>
-             </address>
+             <ul>
+                 <li>
+                     <img src="Images/footer_location-icon.png" style="height: 30px;" alt="location icon">
+                     <p><address>Монгол улс, Улаанбаатар хот, <br>
+                         Хан-Уул дүүрэг 11-р хороо, <br>
+                         Дүнжингаравын гудамж, <br>
+                         Зайсан Хилл Цогцолбор, 1-р давхар</address></p>
+                 </li>
+                 <li>
+                     <img src="Images/footer_mail-icon.png" style="height: 30px;" alt="mail icon">
+                     <a href="mailto:info@primecineplex.mn"><address>@primecineplex.mn</address></a>
+                 </li>
+                 <li>
+                     <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
+                     <p><address>+976-7510-0000</address></p>
+                 </li>
+             </ul>
         </div>
         <div>
-             <label for="location">Салбараа сонгоно уу.</label>
-             <select name="" id="">
+             <select name="location" id="">
                  <option value="">Зайсан Хилл Комплекс</option>
                  <option value="">Энканто товер</option>
                  <option value="">Ботаник центер</option>
