bagshd shalguulad zasav

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         </nav>
     </header>
     <main>
-            <section>
+            <div>
                 <ul>
                     <li><img src="Images/bigposter1.png" style="height: 50px" alt="Elemental poster"><button>Трэйлэр</button><button>Захиалах</button></li>
                     <li><img src="Images/bigposter2.png" style="height: 50px;" alt="Suzumu poster"><button>Трэйлэр</button><button>Захиалах</button></li>
@@ -76,18 +76,13 @@
                 </li>
                 <li>
                     <img src="Images/footer_phone-icon.png" style="height: 30px;" alt="phone icon">
-                    <p>+976-7510-0000</p>
+                    <a href="tel:+976-7510-0000">+976-7510-0000</p>
                 </li>
             </ul>
             </address>
        </div>
        <div>
-            <select name="location" id="">
-                <option value="">Зайсан Хилл Комплекс</option>
-                <option value="">Энканто товер</option>
-                <option value="">Ботаник центер</option>
-            </select>
-            <p><a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a></p>
+            <a href="https://www.google.com/maps"><img src="Images/footer_googlemap.png" style="height: 50px;" alt="google map photo"></a>
        </div> 
     </footer>
 </body>
