--- a/ticketing.html
+++ b/ticketing.html
@@ -8,7 +8,7 @@
 <body>
     <nav>
         <div>
-            <img src="Images/logo.jpg" alt="" width="10%" height="10%">
+            <img src="Images/logo.jpg" alt="" style="width: 10%; height: 10%;">
             <h1>Захиалга</h1>
             <a href="login.html">Нэвтрэх</a>
             <p>Дуусах хугацаа: </p>
@@ -20,8 +20,8 @@
         <ul>
             <li>
                 <h2>A</h2>
-                <label for="checkbox">1</label>
-                <input type="checkbox" id="" name="" value="">
+                <label for="ch_1">1</label>
+                <input type="checkbox" id="ch_1" name="" value="">
                 <label for="checkbox">2</label>
                 <input type="checkbox" id="" name="" value="">
                 <label for="checkbox">3</label>
