bagshin zas gsn ymig zasav

--- a/ticketing.html
+++ b/ticketing.html
@@ -3,12 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Төлбөр баталгаажуулах, тасалбар захиалах"> 
     <title>Ticketing</title>
 </head>
 <body>
     <nav>
         <div>
-            <img src="Images/logo.jpg" alt="" style="width: 10%; height: 10%;">
+            <img src="Images/logo.jpg" alt="logo icon" style="width: 10%; height: 10%;">
             <h1>Захиалга</h1>
             <a href="login.html">Нэвтрэх</a>
             <p>Дуусах хугацаа: </p>
@@ -16,7 +17,7 @@
         </div>
     </nav>
     <div>
-        <h4>Дэлгэц</h4>
+        <h2>Дэлгэц</h2>
         <ul>
             <li>
                 <h2>A</h2>
@@ -383,59 +384,58 @@
                 <h2>H</h2>
             </li>
         </ul>      
-        <img src="img_mandah/chair/hooson.PNG" alt="" width="3%" height="3%">
-        <h4>Хоосон</h4>
-        <img src="img_mandah/chair/songoson.PNG" alt="" width="3%" height="3%">
-        <h4>Сонгосон</h4>
-        <img src="img_mandah/chair/bolomjgui.PNG" alt="" width="3%" height="3%">
-        <h4>Боломжгүй</h4>
+        <img src="img_mandah/chair/hooson.PNG" alt="chair" width="3%" height="3%">
+        <p>Хоосон</p>
+        <img src="img_mandah/chair/songoson.PNG" alt="chair" width="3%" height="3%">
+        <p>Сонгосон</p>
+        <img src="img_mandah/chair/bolomjgui.PNG" alt="chair" width="3%" height="3%">
+        <p>Боломжгүй</p>
     </div> 
     <div>
-        <ul>
-            <li>
-                <img src="img_mandah/eat & drink/popcorn.png" alt="" width="10%" height="10%">
-                <p>Попкорн</p>
-                <p>5,000₮</p>
-                <button>+</button>
-                <span>0</span>
-                <button>-</button>
-            </li>
-            <li>
-                <img src="img_mandah/eat & drink/coke.png" alt="" width="10%" height="10%">
-                <p>Кока Кола</p>
-                <p>3,000₮</p>
-                <button>+</button>
-                <span>0</span>
-                <button>-</button>
-            </li>
-            <li>
-                <img src="img_mandah/eat & drink/ice_cream.png" alt="" width="10%" height="10%">
-                <p>Зайрмаг</p>
-                <p>2,000₮</p>
-                <button>+</button>
-                <span>0</span>
-                <button>-</button>
-            </li>
-            <li>
-                <img src="img_mandah/eat & drink/chips.png" alt="" width="10%" height="10%">
-                <p>Coka Cola</p>
-                <p>4,000₮</p>
-                <button>+</button>
-                <span>0</span>
-                <button>-</button>
-            </li>
-        </ul>
+        <article>
+            <img src="img_mandah/eat & drink/popcorn.png" alt="" width="10%" height="10%">
+            <h6>Попкорн</h6>
+            <p>5,000₮</p>
+            <button>+</button>
+            <span>0</span>
+            <button>-</button>
+        </article>
+        <article>
+            <img src="img_mandah/eat & drink/coke.png" alt="" width="10%" height="10%">
+            <h6>Кока Кола</h6>
+            <p>3,000₮</p>
+            <button>+</button>
+            <span>0</span>
+            <button>-</button>
+        </article>
+        <article>
+            <img src="img_mandah/eat & drink/ice_cream.png" alt="" width="10%" height="10%">
+            <h6>Зайрмаг</h6>
+            <p>2,000₮</p>
+            <button>+</button>
+            <span>0</span>
+            <button>-</button>
+        </article>
+        <article>
+            <img src="img_mandah/eat & drink/chips.png" alt="" width="10%" height="10%">
+            <h6>Coka Cola</h6>
+            <p>4,000₮</p>
+            <button>+</button>
+            <span>0</span>
+            <button>-</button>
+        </article>
+        
     </div>
-    <div>
+    <aside>
         <h4>Таны сонголт</h4>
-        <img src="Images/nowplaying_poster1.png" alt="" width="10%" height="10%">
-        <p>SUZUME</p>
-        <p>PG • 2 цаг 2 минут •  Адал явдал, Драм, Уран зөгнөлт •  2023.11.06</p>
-        <p>Салбар: Зайсан</p>
-        <p>Танхим: 3</p>
-        <p>Он, сар, өдөр: 2023.11.17</p>
-        <p>Хугацаа: 2:47 PM</p>
-        <p>Таны суудал: F11 • F12 • F13</p>
+        <img src="Images/nowplaying_poster1.png" alt="poster" width="10%" height="10%">
+        <label for="movie_name">SUZUME</label>
+        <label for="info_movie">PG • 2 цаг 2 минут •  Адал явдал, Драм, Уран зөгнөлт •  2023.11.06</label>
+        <label for="location">Салбар: Зайсан</label>
+        <label for="hall">Танхим: 3</label>
+        <label for="date">Он, сар, өдөр: 2023.11.17</label>
+        <label for="time">Хугацаа: 2:47 PM</label>
+        <label for="chair">Таны суудал: F11 • F12 • F13</label>
         <p>Тоо ширхэг</p>
         <p>Тасалбарын үнэ</p>
         <ul>
@@ -457,7 +457,7 @@
         <p>15,000₮</p>
         <p>Нийт</p>
         <p>75,000₮</p>
-    </div>
+    </aside>
     <div>
         <h3>Төлбөрөө баталгаажуулах</h3>
         <ul>
