bagshiin helsn ymiig zassn

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <header>
         <nav>
             <address>
-            <ul>
-                <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
-                <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
-                <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
-                <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
-            </ul>
+                <ul>
+                    <li><a href="https://www.facebook.com/PrimeCineplexMongolia"><img src="Images/header_fb_icon.png" style="height: 10px;" alt="facebook icon"></a></li>
+                    <li><a href="https://www.instagram.com/primecineplex_mongolia/"><img src="Images/header_ig_icon.png" style="height: 10px;" alt="instagram icon"></a></li>
+                    <li><a href="https://www.youtube.com/@primecineplexmongolia3406"><img src="Images/header_yt_icon.png" style="height: 10px;" alt="youtube icon"></a></li>
+                    <li><a href="mailto:info@primecineplex.mn"><img src="Images/footer_mail-icon.png" style="height: 10px;" alt="mail icon"></a></li>
+                </ul>
             </address>
         </nav>
         <nav>
@@ -31,33 +31,33 @@
         </nav>
     </header>
     <main>
-            <div>
-                <ul>
-                    <li><img src="Images/bigposter1.png" style="height: 50px" alt="Elemental poster"><button>Трэйлэр</button><button>Захиалах</button></li>
-                    <li><img src="Images/bigposter2.png" style="height: 50px;" alt="Suzumu poster"><button>Трэйлэр</button><button>Захиалах</button></li>
-                    <li><img src="Images/bigposter3.png" style="height: 50px;" alt="The NUN poster"><button>Трэйлэр</button><button>Захиалах</button></li>
-                </ul>
-            </section>
-            <section>
-                <h3>МАНАЙ ДЭЛГЭЦНЭЭ</h3>
-                <ul>
-                    <li><a href="movie.html"><img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzumi poster">Suzume no Tojimari</a></li>
-                    <li><a href="movie.html"><img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental</a></li>
-                    <li><a href="movie.html"><img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The Nun poster">The NUN</a></li>
-                    <li><a href="movie.html"><img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Budilaan poster">Будилаан</a></li>
-                    <li><a href="movie.html"><img src="Images/nowplaying_poster5.png" style="height: 100px;" alt="A Haunting in Venice poster">A Haunting in Venice</a></li>
-                </ul>
-            </section>
-            <section>
-                <h3>ТУН УДАХГҮЙ</h3>
-                <ul>
-                    <li><a href="movie.html"><img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator</a></li>
-                    <li><a href="movie.html"><img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol</a></li>
-                    <li><a href="movie.html"><img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb</a></li>
-                    <li><a href="movie.html"><img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw poster">Saw X</a></li>
-                    <li><a href="movie.html"><img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The e=Exorcist poster">The Exorcist</a></li>
-                </ul>
-            </section>
+        <div>
+            <ul>
+                <li><img src="Images/bigposter1.png" style="height: 50px" alt="Elemental poster"><button>Трэйлэр</button><button>Захиалах</button></li>
+                <li><img src="Images/bigposter2.png" style="height: 50px;" alt="Suzumu poster"><button>Трэйлэр</button><button>Захиалах</button></li>
+                <li><img src="Images/bigposter3.png" style="height: 50px;" alt="The NUN poster"><button>Трэйлэр</button><button>Захиалах</button></li>
+            </ul>
+        </div>
+        <section>
+            <h3>МАНАЙ ДЭЛГЭЦНЭЭ</h3>
+            <ul>
+                <li><a href="movie.html"><img src="Images/nowplaying_poster1.png" style="height: 100px;" alt="Suzumi poster">Suzume no Tojimari</a></li>
+                <li><a href="movie.html"><img src="Images/nowplaying_poster2.png" style="height: 100px;" alt="Elemental poster">Elemental</a></li>
+                <li><a href="movie.html"><img src="Images/nowplaying_poster3.png" style="height: 100px;" alt="The Nun poster">The NUN</a></li>
+                <li><a href="movie.html"><img src="Images/nowplaying_poster4.png" style="height: 100px;" alt="Budilaan poster">Будилаан</a></li>
+                <li><a href="movie.html"><img src="Images/nowplaying_poster5.png" style="height: 100px;" alt="A Haunting in Venice poster">A Haunting in Venice</a></li>
+            </ul>
+        </section>
+        <section>
+            <h3>ТУН УДАХГҮЙ</h3>
+            <ul>
+                <li><a href="movie.html"><img src="Images/comingsoon_poster1.png" style="height: 100px;" alt="The Creator poster">The Creator</a></li>
+                <li><a href="movie.html"><img src="Images/comingsoon_poster2.png" style="height: 100px;" alt="Paw Patrol poster">Paw Patrol</a></li>
+                <li><a href="movie.html"><img src="Images/comingsoon_poster3.png" style="height: 100px;" alt="Cobweb poster">Cobweb</a></li>
+                <li><a href="movie.html"><img src="Images/comingsoon_poster4.png" style="height: 100px;" alt="Saw poster">Saw X</a></li>
+                <li><a href="movie.html"><img src="Images/comingsoon_poster5.png" style="height: 100px;" alt="The e=Exorcist poster">The Exorcist</a></li>
+            </ul>
+        </section>
     </main>
     <footer>
        <div>
